--- a/Day 08/Homework/index02.html
+++ b/Day 08/Homework/index02.html
@@ -70,21 +70,21 @@
         <p>საქართველოს ისტორია იწყება უძველესი დროიდან, როდესაც აქ ჩამოყალიბდა პირველი ადამიანის ჯგუფები. საქართველო არის კულტურულად და ისტორიულად მდიდარი ქვეყანა, რომელიც ცნობილია თავისი უნიკალური კულტურითა და ტრადიციებით.</p>
         <img src="https://www.shutterstock.com/image-photo/picturesque-sunrise-over-ancient-narikala-600nw-2288589401.jpg" alt="უძველესი საქართველო">
         <p>ქართველების წინაპრები ე.წ. ქართლოსის შვილებს წარმოადგენენ. ისინი ცნობილნი იყვნენ თავიანთი სიმამაცით და ძლიერი კულტურული თვითშეგნებით.</p>
-        <button onclick="window.location.href='ancient.html'">დაწვრილებით</button>
+        <button onclick="window.location.href='index4.html'">დაწვრილებით</button>
     </section>
 
     <section id="medieval">
         <h2>საშუალო საუკუნეები</h2>
         <p>საქართველოს ოქროს ხანა შუა საუკუნეებში დაიწყო. სწორედ ამ პერიოდში, დავით აღმაშენებელმა და თამარ მეფემ საქართველო საერთაშორისო სცენაზე წამოაჩინეს.</p>
         <img src="https://mangogeorgia.ge/images/tours/1550547325khertvisi2.jpg" alt="საშუალო საუკუნეების საქართველო">
-        <button onclick="window.location.href='medieval.html'">დაწვრილებით</button>
+        <button onclick="window.location.href='index3.html'">დაწვრილებით</button>
     </section>
 
     <section id="modern">
         <h2>თანამედროვე ისტორია</h2>
         <p>თანამედროვე საქართველოს ისტორია მოიცავს დამოუკიდებლობისთვის ბრძოლის პერიოდს და საქართველოს თანამედროვე სახელმწიფოს ჩამოყალიბებას. საბჭოთა კავშირის დაშლის შემდეგ, საქართველო გახდა დამოუკიდებელი სახელმწიფო.</p>
         <img src="https://img.freepik.com/premium-photo/panoramic-view-tbilisi-capital-georgia-with-old-town-modern-architecture_105751-12177.jpg" alt="თანამედროვე საქართველო">
-        <button onclick="window.location.href='modern.html'">დაწვრილებით</button>
+        <button onclick="window.location.href='index5.html'">დაწვრილებით</button>
     </section>
 
     <footer>
