--- a/Day 10/Classwork/index05.html
+++ b/Day 10/Classwork/index05.html
@@ -1,1 +1,117 @@
-<!-- not finished yet (i'm doing all of this at 5 am i need some sleep...) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Lists</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        .container {
+            display: flex;
+            justify-content: space-between;
+        }
+        .column {
+            width: 45%;
+        }
+        h2 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        h3 {
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        ul, ol {
+            margin: 10px 0;
+            padding-left: 30px;
+        }
+        ul {
+            list-style-position: inside;
+        }
+        ul.square {
+            list-style-type: square;
+        }
+        ul.circle {
+            list-style-type: circle;
+        }
+        ul.none {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        ol.decimal {
+            list-style-type: decimal;
+        }
+        ol.leading-zero {
+            list-style-type: decimal-leading-zero;
+        }
+        ol.lower-alpha {
+            list-style-type: lower-alpha;
+        }
+        ol.lower-roman {
+            list-style-type: lower-roman;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="column">
+            <h2>Unordered lists</h2>
+            <h3>Disc</h3>
+            <ul>
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ul>
+            <h3>Square</h3>
+            <ul class="square">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ul>
+            <h3>Circle</h3>
+            <ul class="circle">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ul>
+            <h3>None - no bullets</h3>
+            <ul class="none">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ul>
+        </div>
+        <div class="column">
+            <h2>Ordered lists</h2>
+            <h3>Decimal</h3>
+            <ol class="decimal">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ol>
+            <h3>Decimal with leading zeros</h3>
+            <ol class="leading-zero">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ol>
+            <h3>Lowercase ASCII letters</h3>
+            <ol class="lower-alpha">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ol>
+            <h3>Lowercase Roman numerals</h3>
+            <ol class="lower-roman">
+                <li>First item</li>
+                <li>Second item</li>
+                <li>Third item</li>
+            </ol>
+        </div>
+    </div>
+</body>
+</html>
