--- a/Day 22/Homework/index04.html
+++ b/Day 22/Homework/index04.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Yoruichi Fan Page</h1>
+    <h1>Welcome to the Yoruichi Fan Page</h1>
     <p>The Goddess of Flash from Bleach</p>
   </header>
 
