--- a/Day 28/Classwork/index0.html
+++ b/Day 28/Classwork/index0.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>External Css</title>
+    <title>Div ელემენტები</title>
     <link rel="stylesheet" href="styles0.css">
 </head>
 <body>
-    <div class="my-div"></div>
+    <div class="box1"></div>
+    <div class="box2"></div>
 </body>
 </html>
